# goit-pythonweb-hw-03

./: .gitignore  Dockerfile  docker-compose.yml  helper.py  http_request.py  main.py  pyproject.toml
storage/: data.json
template/: index.html  message.html  read.jinja
