[project]
name = "goit-pythonweb-hw-03"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Zeleniak",email = "zeleniak.nikita@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
